@@ -22,16 +22,21 @@ JAVACCOMSTR
 
 <builder name="Java">
 <summary>
-Builds one or more Java class files
-from one or more source trees of <filename>.java</filename> files.
-The class files will be placed underneath
-the specified target directory.
+Builds one or more Java class files.
+The sources may be any combination of explicit
+<filename>.java</filename> files,
+or directory trees which will be scanned
+for <filename>.java</filename> files.
+
 SCons will parse each source <filename>.java</filename> file
 to find the classes
 (including inner classes)
 defined within that file,
 and from that figure out the
 target <filename>.class</filename> files that will be created.
+The class files will be placed underneath
+the specified target directory.
+
 SCons will also search each Java file
 for the Java package name,
 which it assumes can be found on a line
@@ -58,6 +63,7 @@ Example:
 <example>
 env.Java(target = 'classes', source = 'src')
 env.Java(target = 'classes', source = ['src1', 'src2'])
+env.Java(target = 'classes', source = ['File1.java', 'File2.java'])
 </example>
 </summary>
 </builder>
